# zero2prod

./: Cargo.toml
.github/workflows/: audit.yml  general.yml
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telementry.rs
src/routes/: subscriptions.rs
src/states/: form_data.rs  mod.rs
tests/: health_check.rs
