[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"
authors = ["蔡元瑞 <caiyuanrui@outlook.com>"]

[lib]
path = "src/lib.rs"

# [[]] is an array syntax
# only one library but multiple binaries allowed in a project
[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
tokio = {version = "1", features= ["macros","rt-multi-thread"]}
serde = {version = "1.0.210", features = ["derive"]}
config = "0.14.0"
chrono = "0.4.38"
actix-cors = "0.7.0"

[dependencies.sqlx]
version = "0.8.2"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dependencies.uuid]
version = "1.10.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dev-dependencies]
reqwest = "0.11"
